Added models and migration

--- a/PostalCodeApi/appsettings.json
+++ b/PostalCodeApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostalCodeDb": "Server=localhost;Database=PostalCode;Trusted_Connection=True;"
+  }
 }
