Added postal code import, validation and custom error responses

--- a/PostalCodeApi/appsettings.json
+++ b/PostalCodeApi/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostalCodeDb": "Server=localhost;Database=PostalCode;Trusted_Connection=True;"
+  },
+  "ImportOptions": {
+    "DownloadsFolder": "Downloads/",
+    "DownloadUrl": "https://download.geonames.org/export/zip/",
+    "DownloadFileExtension": ".zip",
+    "ExtractedFileExtension": ".txt"
   }
 }
