--- a/PostalCodeApi/appsettings.json
+++ b/PostalCodeApi/appsettings.json
@@ -15,5 +15,6 @@
     "DownloadUrl": "https://download.geonames.org/export/zip/",
     "DownloadFileExtension": ".zip",
     "ExtractedFileExtension": ".txt"
-  }
+  },
+  "Secret": "You_Need_To_Provide_A_Long_Secret_Key_Here"
 }
