Added authentication and authorization

--- a/PostalCodeApi/appsettings.json
+++ b/PostalCodeApi/appsettings.json
@@ -16,5 +16,8 @@
     "DownloadFileExtension": ".zip",
     "ExtractedFileExtension": ".txt"
   },
-  "Secret": "You_Need_To_Provide_A_Long_Secret_Key_Here"
+  "Jwt": {
+    "Key": "You_Need_To_Provide_A_Long_Secret_Key_Here",
+    "Issuer": "Test.com"
+  }
 }
